# powerplant-coding-challenge

./: .bumpversion.cfg  .dockerignore  .flaskenv  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.txt  Engie.sln  EngieCCAbadSethi.sln  GemSpaasPowerplant.sln  Makefile  PowerPlantCC.sln  Problem Analysis.docx  Program.cs  README.md  README_O.md  README_Original.md  WebApplicationOssia.sln  api.py  app.py  compose.yml  config.ini  config.yml  docker-compose.yaml  docker-compose.yaml.txt  docker-compose.yml  dockerfile  execute_payloads.sh  index.py  main.py  manage.py  model.py  original_README.md  payload1.json  powerplant-coding-challenge.csproj  powerplant-coding-challenge.http  powerplant-coding-challenge.sln  powerplant.py  powerplant_planning.py  pyproject.toml  (+9 more)
API/: README.md  main.py
ApiTests/: ApiTests.csproj  ProductionPlanTests.cs
Domain/: IPowerClient.cs  PowerControl.cs
EngieApi/: DeliverPartial.cs  EngieApi.csproj  ErrorLoggingMiddleware.cs  Fuel.cs  Fuels.cs  PowerPlant.cs  Processing.cs  ProductionPlanRequest.cs  ProductionPlanResponse.cs  Program.cs  appsettings.Development.json
EngieApiTests/: EngieApiTests.csproj
Gem.PowerplantChallenge/: Gem.PowerplantChallenge.sln
GemSpaasPowerplant/: GemSpaasPowerplant - Backup.csproj  GemSpaasPowerplant.csproj  Program.cs
GlobalEnergyManagement/: GlobalEnergyManagement.sln
PowerPlant.Api/: ExceptionMiddleware.cs  PowerPlant.Api.csproj  Program.cs  dockerfile
PowerPlant.Domain/: PowerPlant.Domain.csproj
PowerPlant.Services/: CalculateProductionPlan.cs  IPowerPlantService.cs  (+5 more)
(+330 files in other folders)
