[tool.poetry]
name = "energy"
version = "0.1.0"
description = "This program calculates how many powerplants have to be enabled or disabled and their power supply"
authors = ["Alvaro Ramos de Santiago"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pydantic = "^2.5.1"
uvicorn = "^0.24.0.post1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
